# agent-wars

./: Cargo.toml  LICENSE  README.md
replays/: 03504ddf-b429-433d-86aa-da0d532c1416.json  03df4400-3cd3-4bbe-a174-fff6f2185b66.json  299473de-4f68-41f6-8062-577d0c2b32ac.json  5e62da32-10be-4b8b-b79d-8493d6be3b0b.json  a213d816-f024-4f7b-8768-a5fd45609c74.json
scripts/: alice.js
src/: game.rs  lib.rs  lobby.rs  main.rs  proto.rs  ws.rs
web/: client.js  index.html  style.css
