[package]
name = "agent-wars"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent-wars"
path = "src/main.rs"

[[bin]]
name = "agent-wars-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "agent-wars-harness"
path = "src/bin/harness.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
rquickjs = { version = "0.6", features = ["macro"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_yaml = "0.9"
